remove make instructions

--- a/solutions/01_agent_hello_world/solution.ipynb
+++ b/solutions/01_agent_hello_world/solution.ipynb
@@ -20,9 +20,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.0\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.3\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "\n",
+      "🤖 Exercise 1: Agent Hello World - Solution\n",
+      "\n",
+      "✅ Environment variables already loaded\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install --quiet openai-agents httpx python-dotenv nest-asyncio\n",
     "\n",
@@ -55,9 +70,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Weather tool defined with @function_tool\n",
+      "ℹ️  This tool makes real API calls to weather.gov\n"
+     ]
+    }
+   ],
    "source": [
     "@function_tool\n",
     "async def get_weather_alerts(state: str) -> str:\n",
@@ -125,9 +149,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Agent created with weather tool\n",
+      "ℹ️  The agent can now fetch real weather alerts\n"
+     ]
+    }
+   ],
    "source": [
     "# Create agent with the custom weather tool\n",
     "agent = Agent(\n",
@@ -151,21 +184,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008000; text-decoration-color: #008000\">✓</span> OPENAI_API_KEY detected: sk-s<span style=\"color: #808000; text-decoration-color: #808000\">...</span>WyoA\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[32m✓\u001b[0m OPENAI_API_KEY detected: sk-s\u001b[33m...\u001b[0mWyoA\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ OPENAI_API_KEY detected: sk-s...WyoA\n"
+     ]
     }
    ],
    "source": [
@@ -188,9 +215,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Query: Are there any weather alerts for California?\n",
+      "\n",
+      "🌐 Calling NWS API for state: CA\n",
+      "✅ Found 16 alert(s)\n",
+      "\n",
+      "🤖 Agent Response:\n",
+      "Yes, there are active weather alerts in California:\n",
+      "\n",
+      "- Wind Advisory: In effect until October 28 at 4:00 PM PDT (issued by NWS Los Angeles/Oxnard).\n",
+      "- Heat Advisory: In effect until October 29 at 7:00 PM PDT (issued by NWS Los Angeles/Oxnard).\n",
+      "\n",
+      "Both wind and heat advisories are currently active for certain areas. Please take precautions if you are in the affected regions.\n",
+      "\n",
+      "ℹ️  This used a real API call to the National Weather Service!\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "async def run_solution():\n",
     "    query = \"Are there any weather alerts for California?\"\n",
@@ -231,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
