--- a/exercises/01_agent_hello_world/exercise.ipynb
+++ b/exercises/01_agent_hello_world/exercise.ipynb
@@ -26,7 +26,7 @@
     "   OPENAI_API_KEY=sk-your-key-here\n",
     "   ```\n",
     "\n",
-    "2. **Dependencies:** Already installed if you ran `make setup`\n",
+    "2. **Dependencies:** Installed in the first cell of this notebook:\n",
     "   - `openai-agents` - OpenAI Agents SDK\n",
     "   - `httpx` - Async HTTP client\n",
     "   - `python-dotenv` - Environment variable management\n",
@@ -319,7 +319,21 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "## Next Steps\n\nOnce you've completed this exercise, you'll understand:\n\n- ✅ How to create agents with the OpenAI Agents SDK\n- ✅ How to define custom tools that call real APIs\n- ✅ How the agent decides when to use tools\n- ✅ How to run agents with async/await\n\n**Ready for more?** Proceed to:\n\n- **[Exercise 2: Temporal Hello World](../02_temporal_hello_world/exercise.ipynb)** - Learn Temporal workflows and activities\n- **[Exercise 3: Durable Agent](../03_durable_agent/exercise.ipynb)** - Combine agents + Temporal for production durability!"
+   "source": [
+    "## Next Steps\n",
+    "\n",
+    "Once you've completed this exercise, you'll understand:\n",
+    "\n",
+    "- ✅ How to create agents with the OpenAI Agents SDK\n",
+    "- ✅ How to define custom tools that call real APIs\n",
+    "- ✅ How the agent decides when to use tools\n",
+    "- ✅ How to run agents with async/await\n",
+    "\n",
+    "**Ready for more?** Proceed to:\n",
+    "\n",
+    "- **[Exercise 2: Temporal Hello World](../02_temporal_hello_world/exercise.ipynb)** - Learn Temporal workflows and activities\n",
+    "- **[Exercise 3: Durable Agent](../03_durable_agent/exercise.ipynb)** - Combine agents + Temporal for production durability!"
+   ]
   }
  ],
  "metadata": {
