--- a/example-notebook/02-Adding-Durability-Solution.ipynb
+++ b/example-notebook/02-Adding-Durability-Solution.ipynb
@@ -1143,13 +1143,18 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.11.14",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.11.13"
+   "version": "3.11.14"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "default"
+   }
   }
  },
  "nbformat": 4,
