--- a/example-notebook/03-Human-in-the-Loop-Solution.ipynb
+++ b/example-notebook/03-Human-in-the-Loop-Solution.ipynb
@@ -1029,7 +1029,7 @@
    "version": ""
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.11.14",
    "language": "python",
    "name": "python3"
   },
@@ -1043,7 +1043,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.11.14"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "default"
+   }
   }
  },
  "nbformat": 4,
