--- a/exercises/03_durable_agent/exercise.ipynb
+++ b/exercises/03_durable_agent/exercise.ipynb
@@ -638,7 +638,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3.11.14",
    "language": "python",
    "name": "python3"
   },
@@ -652,7 +652,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.14"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "default"
+   }
   }
  },
  "nbformat": 4,
