--- a/solutions/01_agent_hello_world/solution.ipynb
+++ b/solutions/01_agent_hello_world/solution.ipynb
@@ -267,7 +267,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.11.14",
    "language": "python",
    "name": "python3"
   },
@@ -282,6 +282,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.14"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "default"
+   }
   }
  },
  "nbformat": 4,
