--- a/solutions/02_temporal_hello_world/solution.ipynb
+++ b/solutions/02_temporal_hello_world/solution.ipynb
@@ -145,7 +145,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.11.14",
    "language": "python",
    "name": "python3"
   },
@@ -159,7 +159,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.11.14"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "default"
+   }
   }
  },
  "nbformat": 4,
