--- a/solutions/03_durable_agent/solution.ipynb
+++ b/solutions/03_durable_agent/solution.ipynb
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e2q9zrqb2t",
+   "id": "4538e700",
    "metadata": {},
    "source": [
     "## Component 4: `starter.py`\n",
@@ -498,7 +498,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.11.14",
    "language": "python",
    "name": "python3"
   },
@@ -513,6 +513,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.14"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "default"
+   }
   }
  },
  "nbformat": 4,
