--- a/solutions/03_durable_agent/solution_durability.ipynb
+++ b/solutions/03_durable_agent/solution_durability.ipynb
@@ -1805,7 +1805,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e2q9zrqb2t",
+   "id": "1955d3f2",
    "metadata": {},
    "source": [
     "## Component 4: `starter.py`\n",
@@ -1917,7 +1917,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.11.14",
    "language": "python",
    "name": "python3"
   },
@@ -1932,6 +1932,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.14"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "default"
+   }
   }
  },
  "nbformat": 4,
