--- a/temporal_installation.ipynb
+++ b/temporal_installation.ipynb
@@ -22,6 +22,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "90f28829",
+   "metadata": {},
+   "source": [
+    "## Selecting Kernel\n",
+    "\n",
+    "When prompted to select a Kernel in VSCode, please select version `3.11.x`\n",
+    "\n",
+    "![Kernel selection](images/kernel-env.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1bc4ec7a",
@@ -36,7 +48,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.11.14",
    "language": "python",
    "name": "python3"
   },
@@ -51,6 +63,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.14"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "default"
+   }
   }
  },
  "nbformat": 4,
