--- a/solutions/01_agent_hello_world/solution.ipynb
+++ b/solutions/01_agent_hello_world/solution.ipynb
@@ -20,9 +20,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.0\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.3\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "\n",
+      "🤖 Exercise 1: Agent Hello World - Solution\n",
+      "\n",
+      "✅ Loaded environment variables from .env\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install --quiet openai-agents httpx python-dotenv nest-asyncio\n",
     "\n",
@@ -55,9 +70,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Weather tool defined with @function_tool\n",
+      "ℹ️  This tool makes real API calls to weather.gov\n"
+     ]
+    }
+   ],
    "source": [
     "@function_tool\n",
     "async def get_weather_alerts(state: str) -> str:\n",
@@ -217,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
