--- a/temporal_installation.ipynb
+++ b/temporal_installation.ipynb
@@ -11,10 +11,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "028e4a1f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1mtemporal:\u001b[0m Downloading Temporal CLI latest\n",
+      "Warning: Not enforcing strong cipher suites for TLS, this is potentially less secure\n",
+      "Warning: Not enforcing TLS v1.2, this is potentially less secure\n",
+      "\u001b[1mtemporal:\u001b[0m Temporal CLI installed at /home/vscode/.temporalio/bin/temporal\n",
+      "\u001b[1mtemporal:\u001b[0m For convenience, we recommend adding it to your PATH\n",
+      "\u001b[1mtemporal:\u001b[0m If using bash, run echo export PATH=\"\\$PATH:/home/vscode/.temporalio/bin\" >> ~/.bashrc\n"
+     ]
+    }
+   ],
    "source": [
     "# Install Temporal CLI\n",
     "# | label: temporal-cli-install\n",
