remove incorrect notes

--- a/temporal_installation.ipynb
+++ b/temporal_installation.ipynb
@@ -12,18 +12,17 @@
     "## Kernel Selection\n",
     "\n",
     "When you open this notebook, VS Code may prompt you to select a kernel. Choose:\n",
-    "- **Python 3** (or **Python 3.11** if available)\n",
-    "- If you see multiple options, select the one that matches your project environment\n",
+    "- **Python 3.11**\n",
     "- The kernel name should appear in the top-right corner of the notebook\n",
     "\n",
     "## Instructions\n",
     "\n",
     "1. **Run Cell 1** to install the Temporal CLI (takes ~30 seconds)\n",
     "2. **Run Cell 2** to start the Temporal dev server\n",
-    "   - This cell will continue running - that's expected! \u2705\n",
+    "   - This cell will continue running - that's expected! ✅\n",
     "   - The server must stay running for exercises 2, 3, and 4\n",
-    "3. **Verify** the server is running by visiting http://localhost:8233\n",
-    "   - In Codespaces: Go to the **Ports** tab \u2192 Find port **8233** \u2192 Click the **Globe icon** \ud83c\udf10\n",
+    "3. **Verify** the server is running:\n",
+    "   - In Codespaces: Go to the **Ports** tab → Find port **8233** → Click the **Globe icon** 🌐\n",
     "\n",
     "Run the cells below in order:\n"
    ]
@@ -40,10 +39,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "028e4a1f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1mtemporal:\u001b[0m Downloading Temporal CLI latest\n",
+      "Warning: Not enforcing strong cipher suites for TLS, this is potentially less secure\n",
+      "Warning: Not enforcing TLS v1.2, this is potentially less secure\n",
+      "\u001b[1mtemporal:\u001b[0m Temporal CLI installed at /home/vscode/.temporalio/bin/temporal\n",
+      "\u001b[1mtemporal:\u001b[0m For convenience, we recommend adding it to your PATH\n",
+      "\u001b[1mtemporal:\u001b[0m If using bash, run echo export PATH=\"\\$PATH:/home/vscode/.temporalio/bin\" >> ~/.bashrc\n"
+     ]
+    }
+   ],
    "source": [
     "# Install Temporal CLI\n",
     "# | label: temporal-cli-install\n",
@@ -60,13 +72,12 @@
     "Run the cell below to start the Temporal dev server.\n",
     "\n",
     "**Important:** \n",
-    "- This cell will keep running (showing server logs) - this is normal! \u2705\n",
+    "- This cell will keep running (showing server logs) - this is normal! ✅\n",
     "- Do not stop this cell - the server needs to stay running\n",
     "- Open a new notebook/terminal to run your exercises\n",
     "\n",
     "**Verify it's working:**\n",
-    "- Visit http://localhost:8233 to see the Temporal Web UI\n",
-    "- **In Codespaces:** Go to the **Ports** tab at the bottom \u2192 Find port **8233** \u2192 Click the **Globe icon** \ud83c\udf10\n"
+    "- **In Codespaces:** Go to the **Ports** tab at the bottom → Find port **8233** → Click the **Globe icon** 🌐\n"
    ]
   },
   {
@@ -74,7 +85,19 @@
    "execution_count": null,
    "id": "1bc4ec7a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CLI 1.5.1 (Server 1.29.1, UI 2.42.1)\n",
+      "\n",
+      "Server:  localhost:7233\n",
+      "UI:      http://localhost:8233\n",
+      "Metrics: http://localhost:40513/metrics\n"
+     ]
+    }
+   ],
    "source": [
     "# Start Temporal dev server\n",
     "#| label: temporal-start\n",
