fix 04 env loading issue

--- a/solutions/01_agent_hello_world/solution.ipynb
+++ b/solutions/01_agent_hello_world/solution.ipynb
@@ -20,9 +20,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.0\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.3\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "\n",
+      "🤖 Exercise 1: Agent Hello World - Solution\n",
+      "\n",
+      "✅ Loaded environment variables from .env\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install --quiet openai-agents httpx python-dotenv nest-asyncio\n",
     "\n",
@@ -40,8 +55,8 @@
     "else:\n",
     "    env_status = \"Environment variables already loaded\"\n",
     "\n",
-    "print(\"\\n\ud83e\udd16 Exercise 1: Agent Hello World - Solution\\n\")\n",
-    "print(f\"\u2705 {env_status}\")"
+    "print(\"\\n🤖 Exercise 1: Agent Hello World - Solution\\n\")\n",
+    "print(f\"✅ {env_status}\")"
    ]
   },
   {
@@ -70,7 +85,7 @@
     "    Returns:\n",
     "        String describing current weather alerts\n",
     "    \"\"\"\n",
-    "    print(f\"\ud83c\udf10 Calling NWS API for state: {state}\")\n",
+    "    print(f\"🌐 Calling NWS API for state: {state}\")\n",
     "    \n",
     "    try:\n",
     "        # Call the National Weather Service API\n",
@@ -85,7 +100,7 @@
     "            features = data.get(\"features\", [])\n",
     "            \n",
     "            if not features:\n",
-    "                print(f\"\u2705 No active alerts\")\n",
+    "                print(f\"✅ No active alerts\")\n",
     "                return f\"No active weather alerts for {state.upper()}.\"\n",
     "            \n",
     "            # Extract alert information\n",
@@ -98,20 +113,20 @@
     "                alerts.append(f\"- {event} ({severity}): {headline}\")\n",
     "            \n",
     "            result = f\"Active weather alerts for {state.upper()}:\\n\" + \"\\n\".join(alerts)\n",
-    "            print(f\"\u2705 Found {len(features)} alert(s)\")\n",
+    "            print(f\"✅ Found {len(features)} alert(s)\")\n",
     "            return result\n",
     "        \n",
     "    except httpx.HTTPError as e:\n",
     "        error_msg = f\"Failed to fetch weather alerts: {str(e)}\"\n",
-    "        print(f\"\u274c {error_msg}\")\n",
+    "        print(f\"❌ {error_msg}\")\n",
     "        return error_msg\n",
     "    except Exception as e:\n",
     "        error_msg = f\"Unexpected error: {str(e)}\"\n",
-    "        print(f\"\u274c {error_msg}\")\n",
+    "        print(f\"❌ {error_msg}\")\n",
     "        return error_msg\n",
     "\n",
-    "print(\"\u2705 Weather tool defined with @function_tool\")\n",
-    "print(\"\u2139\ufe0f  This tool makes real API calls to weather.gov\")"
+    "print(\"✅ Weather tool defined with @function_tool\")\n",
+    "print(\"ℹ️  This tool makes real API calls to weather.gov\")"
    ]
   },
   {
@@ -136,8 +151,8 @@
     "    tools=[get_weather_alerts]\n",
     ")\n",
     "\n",
-    "print(\"\u2705 Agent created with weather tool\")\n",
-    "print(\"\u2139\ufe0f  The agent can now fetch real weather alerts\")"
+    "print(\"✅ Agent created with weather tool\")\n",
+    "print(\"ℹ️  The agent can now fetch real weather alerts\")"
    ]
   },
   {
@@ -157,11 +172,11 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008000; text-decoration-color: #008000\">\u2713</span> OPENAI_API_KEY detected: sk-s<span style=\"color: #808000; text-decoration-color: #808000\">...</span>WyoA\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008000; text-decoration-color: #008000\">✓</span> OPENAI_API_KEY detected: sk-s<span style=\"color: #808000; text-decoration-color: #808000\">...</span>WyoA\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[32m\u2713\u001b[0m OPENAI_API_KEY detected: sk-s\u001b[33m...\u001b[0mWyoA\n"
+       "\u001b[32m✓\u001b[0m OPENAI_API_KEY detected: sk-s\u001b[33m...\u001b[0mWyoA\n"
       ]
      },
      "metadata": {},
@@ -174,7 +189,7 @@
     "    raise RuntimeError(\"OPENAI_API_KEY is not set. Add it to your .env file.\")\n",
     "\n",
     "masked_key = f\"{api_key[:4]}...{api_key[-4:]}\" if len(api_key) >= 8 else \"***\"\n",
-    "print(f\"\u2705 OPENAI_API_KEY detected: {masked_key}\")"
+    "print(f\"✅ OPENAI_API_KEY detected: {masked_key}\")"
    ]
   },
   {
@@ -200,8 +215,8 @@
     "    result = await Runner.run(agent, query)\n",
     "    \n",
     "    # Display the final output\n",
-    "    print(f\"\\n\ud83e\udd16 Agent Response:\\n{result.final_output}\\n\")\n",
-    "    print(\"\u2139\ufe0f  This used a real API call to the National Weather Service!\\n\")\n",
+    "    print(f\"\\n🤖 Agent Response:\\n{result.final_output}\\n\")\n",
+    "    print(\"ℹ️  This used a real API call to the National Weather Service!\\n\")\n",
     "\n",
     "# Jupyter-specific async handling (notebooks already have an event loop)\n",
     "# In a regular Python script, you would use: asyncio.run(run_solution())\n",
@@ -231,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
