move nest_asyncio and improve exercises

--- a/exercises/01_agent_hello_world/exercise.ipynb
+++ b/exercises/01_agent_hello_world/exercise.ipynb
@@ -142,6 +142,7 @@
     "import httpx\n",
     "from dotenv import load_dotenv\n",
     "from agents import Agent, Runner, function_tool\n",
+    "import nest_asyncio\n",
     "\n",
     "# Load environment variables\n",
     "load_dotenv()\n",
@@ -171,7 +172,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Weather tool defined with @function_tool\n",
+      "ℹ️  This tool makes real API calls to weather.gov\n"
+     ]
+    }
+   ],
    "source": [
     "@function_tool\n",
     "async def get_weather_alerts(state: str) -> str:\n",
@@ -184,14 +194,50 @@
     "    Returns:\n",
     "        String describing current weather alerts\n",
     "    \"\"\"\n",
-    "    # TODO: Make a real API call to the National Weather Service\n",
-    "    # API endpoint: https://api.weather.gov/alerts/active/area/{state}\n",
-    "    # Hint: Use async with httpx.AsyncClient() as client\n",
-    "    # Hint: await client.get(url, headers=headers, timeout=10.0)\n",
-    "    # Hint: Parse the JSON response and extract alert information\n",
-    "    # Hint: Handle cases where there are no active alerts\n",
-    "    \n",
-    "    pass"
+    "    print(f\"🌐 Calling NWS API for state: {state}\")\n",
+    "\n",
+    "    try:\n",
+    "        # Call the National Weather Service API\n",
+    "        # TODO fill in the url: https://api.weather.gov/alerts/active/area/\n",
+    "        url = f\"/{state.upper()}\"\n",
+    "        headers = {\"User-Agent\": \"OpenAI-Agents-Workshop (educational)\"}\n",
+    "\n",
+    "        async with httpx.AsyncClient() as client:\n",
+    "            response = await client.get(url, headers=headers, timeout=10.0)\n",
+    "            response.raise_for_status()\n",
+    "\n",
+    "            data = response.json()\n",
+    "            features = data.get(\"features\", [])\n",
+    "\n",
+    "            if not features:\n",
+    "                print(\"✅ No active alerts\")\n",
+    "                return f\"No active weather alerts for {state.upper()}.\"\n",
+    "\n",
+    "            # Extract alert information\n",
+    "            alerts = []\n",
+    "            for feature in features[:5]:  # Limit to first 5 alerts\n",
+    "                properties = feature.get(\"properties\", {})\n",
+    "                event = properties.get(\"event\", \"Unknown\")\n",
+    "                headline = properties.get(\"headline\", \"No headline\")\n",
+    "                severity = properties.get(\"severity\", \"Unknown\")\n",
+    "                alerts.append(f\"- {event} ({severity}): {headline}\")\n",
+    "\n",
+    "            result = f\"Active weather alerts for {state.upper()}:\\n\" + \"\\n\".join(alerts)\n",
+    "            print(f\"✅ Found {len(features)} alert(s)\")\n",
+    "            return result\n",
+    "\n",
+    "    except httpx.HTTPError as e:\n",
+    "        error_msg = f\"Failed to fetch weather alerts: {str(e)}\"\n",
+    "        print(f\"❌ {error_msg}\")\n",
+    "        return error_msg\n",
+    "    except Exception as e:\n",
+    "        error_msg = f\"Unexpected error: {str(e)}\"\n",
+    "        print(f\"❌ {error_msg}\")\n",
+    "        return error_msg\n",
+    "\n",
+    "\n",
+    "print(\"✅ Weather tool defined with @function_tool\")\n",
+    "print(\"ℹ️  This tool makes real API calls to weather.gov\")"
    ]
   },
   {
@@ -217,10 +263,12 @@
    "outputs": [],
    "source": [
     "# TODO: Create an agent with the Agents SDK\n",
+    "# Hint: docs: https://openai.github.io/openai-agents-python/tools/#function-tools\n",
     "# agent = Agent(\n",
     "#     name=\"Weather Agent\",\n",
     "#     instructions=\"You help users get weather alert information for US states\",\n",
-    "#     tools=[get_weather_alerts]\n",
+    "#TODO: you can pass in a tool or an apple, which will you choose?\n",
+    "#     tools=[]\n",
     "# )"
    ]
   },
@@ -235,21 +283,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "RuntimeError",
-     "evalue": "OPENAI_API_KEY is not set. Add it to your .env file.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mRuntimeError\u001b[39m                              Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m api_key = os.getenv(\u001b[33m\"\u001b[39m\u001b[33mOPENAI_API_KEY\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m api_key:\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mOPENAI_API_KEY is not set. Add it to your .env file.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      5\u001b[39m masked_key = \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mapi_key[:\u001b[32m4\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m...\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mapi_key[-\u001b[32m4\u001b[39m:]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(api_key) >= \u001b[32m8\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m \u001b[33m\"\u001b[39m\u001b[33m***\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      6\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m✅ OPENAI_API_KEY detected: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmasked_key\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mRuntimeError\u001b[39m: OPENAI_API_KEY is not set. Add it to your .env file."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "api_key = os.getenv(\"OPENAI_API_KEY\")\n",
     "if not api_key:\n",
@@ -274,7 +310,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Query: Are there any weather alerts for California?\n",
+      "\n",
+      "⚠️  Implement the TODOs above!\n",
+      "   Check the solution notebook for reference\n"
+     ]
+    }
+   ],
    "source": [
     "async def run_agent():\n",
     "    query = \"Are there any weather alerts for California?\"\n",
@@ -291,11 +338,15 @@
     "# Jupyter-specific async handling (notebooks already have an event loop)\n",
     "# In a regular Python script, you would use: asyncio.run(run_agent())\n",
     "try:\n",
+    "    # Check if we're already in an async context (like Jupyter notebook)\n",
     "    loop = asyncio.get_running_loop()\n",
-    "    import nest_asyncio\n",
+    "    # Allow nested async calls in the existing event loop\n",
     "    nest_asyncio.apply()\n",
+    "    # Run our async function in the existing loop\n",
     "    await run_agent()\n",
     "except RuntimeError:\n",
+    "    # No event loop exists, so create a new one and run our function\n",
+    "    # This happens in regular Python scripts or non-async environments\n",
     "    asyncio.run(run_agent())"
    ]
   },
