--- a/exercises/02_temporal_hello_world/exercise.ipynb
+++ b/exercises/02_temporal_hello_world/exercise.ipynb
@@ -70,28 +70,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d39fffc4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.0\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.3\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "✅ Imports loaded\n",
-      "✅ Imports loaded\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install --quiet temporalio nest-asyncio\n",
     "\n",
     "import asyncio\n",
+    "import nest_asyncio\n",
     "from datetime import timedelta, datetime\n",
     "import pytz\n",
     "from temporalio import activity, workflow\n",
@@ -268,12 +255,17 @@
     "\n",
     "# Run the workflow in a notebook-friendly way\n",
     "try:\n",
+    "    # Check if we're already in an async context (like Jupyter notebook)\n",
     "    asyncio.get_running_loop()\n",
     "except RuntimeError:\n",
+    "    # No event loop exists, so create a new one and run our function\n",
+    "    # This happens in regular Python scripts or non-async environments\n",
     "    asyncio.run(run_exercise())\n",
     "else:\n",
-    "    import nest_asyncio\n",
+    "    # We're in an existing event loop (Jupyter), so we need special handling\n",
+    "    # Allow nested async calls in the existing event loop\n",
     "    nest_asyncio.apply()\n",
+    "    # Run our async function in the existing loop\n",
     "    await run_exercise()"
    ]
   },
