--- a/solutions/03_durable_agent/solution.ipynb
+++ b/solutions/03_durable_agent/solution.ipynb
@@ -5,7 +5,7 @@
    "id": "29834b7d",
    "metadata": {},
    "source": [
-    "# Exercise 3: Durable Agent \u2014 Solution\n",
+    "# Exercise 3: Durable Agent — Solution\n",
     "\n",
     "Complete implementation combining **OpenAI Agents SDK** with **Temporal** for durability.\n",
     "\n",
@@ -50,6 +50,7 @@
     "# Import all required modules\n",
     "import asyncio\n",
     "import httpx\n",
+    "import nest_asyncio\n",
     "from datetime import timedelta, datetime\n",
     "import pytz\n",
     "from temporalio import activity, workflow\n",
@@ -60,7 +61,7 @@
     "from temporalio.worker.workflow_sandbox import SandboxedWorkflowRunner, SandboxRestrictions\n",
     "from agents import Agent, Runner\n",
     "\n",
-    "print(\"\u2705 All imports successful\")"
+    "print(\"✅ All imports successful\")"
    ]
   },
   {
@@ -130,7 +131,7 @@
     "    # Return structured response with state, count, and alerts for LLM to interpret\n",
     "    return {\"state\": state.upper(), \"count\": len(alerts), \"alerts\": alerts}\n",
     "\n",
-    "print(\"\u2705 Activity 'get_weather' defined\")"
+    "print(\"✅ Activity 'get_weather' defined\")"
    ]
   },
   {
@@ -187,7 +188,7 @@
     "        # Safely extract final output from result object (handles different result types)\n",
     "        return getattr(result, \"final_output\", str(result))\n",
     "\n",
-    "print(f\"\u2705 Workflow 'WeatherAgentWorkflow' defined (task queue: {TASK_QUEUE})\")"
+    "print(f\"✅ Workflow 'WeatherAgentWorkflow' defined (task queue: {TASK_QUEUE})\")"
    ]
   },
   {
@@ -238,17 +239,19 @@
     "        activities=[get_weather],  # List of activities this worker can execute\n",
     "    )\n",
     "    \n",
-    "    print(f\"\u2705 Worker started on task queue: {TASK_QUEUE}\")\n",
+    "    print(f\"✅ Worker started on task queue: {TASK_QUEUE}\")\n",
     "    print(\"   Listening for workflow and activity tasks...\")\n",
     "    # Start polling and executing tasks (blocks until stopped)\n",
     "    await worker.run()\n",
     "\n",
     "# Apply nest_asyncio to allow nested event loops in Jupyter\n",
-    "import nest_asyncio\n",
+    "# Allow async functions to be called from within other async contexts\n",
+    "# This is needed because Jupyter notebooks already run in an event loop\n",
     "nest_asyncio.apply()\n",
     "# Create background task to run worker without blocking the notebook\n",
+    "# Create a task that runs the worker concurrently with other notebook operations\n",
     "worker_task = asyncio.create_task(run_worker())\n",
-    "print(\"\ud83d\udd04 Worker running in background\")"
+    "print(\"🔄 Worker running in background\")"
    ]
   },
   {
@@ -290,8 +293,8 @@
     "        plugins=[OpenAIAgentsPlugin()]  # Enable OpenAI Agents integration\n",
     "    )\n",
     "    \n",
-    "    print(f\"\ud83d\ude80 Starting workflow: {workflow_id}\")\n",
-    "    print(f\"\ud83d\udcdd Query: {query}\\n\")\n",
+    "    print(f\"🚀 Starting workflow: {workflow_id}\")\n",
+    "    print(f\"📝 Query: {query}\\n\")\n",
     "    \n",
     "    # Start the workflow (non-blocking) and get handle for tracking\n",
     "    handle = await client.start_workflow(\n",
@@ -301,16 +304,16 @@
     "        task_queue=TASK_QUEUE  # Queue where worker will pick up this workflow\n",
     "    )\n",
     "    \n",
-    "    print(f\"\u2705 Workflow started: {handle.id}\")\n",
+    "    print(f\"✅ Workflow started: {handle.id}\")\n",
     "    # Print Temporal UI link for observing workflow execution\n",
-    "    print(f\"\ud83d\udd17 View in Temporal UI: http://localhost:8233/namespaces/default/workflows/{workflow_id}\\n\")\n",
-    "    print(\"\u23f3 Waiting for agent response...\\n\")\n",
+    "    print(f\"🔗 View in Temporal UI: http://localhost:8233/namespaces/default/workflows/{workflow_id}\\n\")\n",
+    "    print(\"⏳ Waiting for agent response...\\n\")\n",
     "    \n",
     "    # Wait for workflow to complete and get result (blocking)\n",
     "    result = await handle.result()\n",
     "    \n",
     "    print(\"=\" * 60)\n",
-    "    print(\"\ud83e\udd16 Agent Response:\")\n",
+    "    print(\"🤖 Agent Response:\")\n",
     "    print(\"=\" * 60)\n",
     "    print(result)\n",
     "    print(\"=\" * 60)\n",
@@ -457,7 +460,7 @@
     "    return {\"state\": state.upper(), \"count\": len(alerts), \"alerts\": alerts}\n",
     "\n",
     "\n",
-    "print(\"\u2705 Activity 'get_weather' defined\")\n"
+    "print(\"✅ Activity 'get_weather' defined\")\n"
    ]
   },
   {
