--- a/exercises/02_temporal_hello_world/exercise.ipynb
+++ b/exercises/02_temporal_hello_world/exercise.ipynb
@@ -53,9 +53,7 @@
     "Before starting, ensure you have:\n",
     "\n",
     "1. **Temporal Server Running:** Start it from the root directory:\n",
-    "   - Open `temporal_installation.ipynb` and run all cells to download and start Temporal\n",
-    "\n",
-    "2. **Verify Temporal is running**"
+    "   - Open `temporal_installation.ipynb` and run all cells to download and start Temporal (if you haven't already)"
    ]
   },
   {
@@ -98,7 +96,6 @@
     "Activities are functions that do the actual work in Temporal. They can:\n",
     "- Call external APIs\n",
     "- Access databases\n",
-    "- Perform computations\n",
     "- Automatically retry on failure\n",
     "\n",
     "**TODO:** Complete the `process_data` activity function.\n",
