--- a/exercises/03_durable_agent/exercise.ipynb
+++ b/exercises/03_durable_agent/exercise.ipynb
@@ -25,6 +25,7 @@
     "Before starting, ensure you have:\n",
     "\n",
     "1. **Temporal Server Running:**\n",
+    "    - Open `temporal_installation.ipynb` and run all cells to download and start Temporal (if you haven't already)\n",
     "   \n",
     "\n",
     "### Flow Diagram 🔄\n",
@@ -48,16 +49,6 @@
     "```\n",
     "\n",
     "**Each activity can retry independently, and the entire flow is durable!** 💪\n",
-    "\n",
-    "### Component Structure 📦\n",
-    "\n",
-    "```bash\n",
-    "   make temporal-up\n",
-    "   # Or manually: temporal server start-dev\n",
-    "   ```\n",
-    "   Verify at: http://localhost:8233\n",
-    "\n",
-    "2. **OpenAI API Key:** Add to `.env` file in project root:\n",
     "   "
    ]
   },
@@ -71,6 +62,8 @@
     "Before doing the exercise, you need to:\n",
     "\n",
     "- Install necessary dependencies\n",
+    "\n",
+    "These steps should already be completed from previous exercises:\n",
     "- Create your `.env` file and supply your API key\n",
     "- Load the environment variables\n",
     "- Download and start a local Temporal Service"
@@ -203,25 +196,22 @@
     "    \"\"\"Fetch active NWS alerts for a 2-letter US state code (e.g., 'CA').\"\"\"\n",
     "    # TODO: Set User-Agent header required by National Weather Service API\n",
     "    headers = {\"User-Agent\": \"\"}  # HINT: Use \"Temporal-Agents-Workshop/1.0 (educational@example.com)\"\n",
-    "    # TODO: Create async HTTP client with 10-second timeout to prevent hanging\n",
     "    async with httpx.AsyncClient(timeout=10) as client:\n",
     "        # TODO: Make GET request to NWS alerts endpoint for the specified state\n",
     "        r = await client.get(\n",
-    "            f\"https://api.weather.gov/alerts/active/area/{state}\",\n",
+    "            f\"/{state}\",\n",
     "            headers=headers\n",
     "        )\n",
     "        # TODO: Raise exception if request fails (4xx or 5xx) - Temporal will auto-retry\n",
-    "        r.raise_for_status()\n",
-    "        # TODO: Parse JSON response into Python dictionary\n",
     "        data = r.json()\n",
     "\n",
-    "    # TODO: Initialize empty list to collect alert information\n",
+    "    # Initialize empty list to collect alert information\n",
     "    alerts = []\n",
-    "    # TODO: Loop through first 5 features (weather alerts) in the response\n",
+    "    # Loop through first 5 features (weather alerts) in the response\n",
     "    for f in (data.get(\"features\") or [])[:5]:\n",
-    "        # TODO: Extract properties object from each feature (contains alert details)\n",
+    "        # Extract properties object from each feature (contains alert details)\n",
     "        p = f.get(\"properties\", {})\n",
-    "        # TODO: Build structured alert dictionary with key information\n",
+    "        # Build structured alert dictionary with key information\n",
     "        alerts.append({\n",
     "            \"event\": p.get(\"event\"),  # Alert type (e.g., \"Flash Flood Warning\")\n",
     "            \"headline\": p.get(\"headline\"),  # Human-readable alert headline\n",
@@ -230,7 +220,7 @@
     "        })\n",
     "\n",
     "    # TODO: Return structured response with state, count, and alerts for LLM to interpret\n",
-    "    return {\"state\": state.upper(), \"count\": len(alerts), \"alerts\": alerts}\n",
+    "    return {\"FILL ME IN\"}\n",
     "\n",
     "print(\"✅ Activity 'get_weather' defined\")"
    ]
@@ -261,10 +251,10 @@
    "outputs": [],
    "source": [
     "# TODO: Define which task queue this workflow will use for communication\n",
-    "TASK_QUEUE = \"agents-sdk-queue\"\n",
+    "TASK_QUEUE = \"\"\n",
     "\n",
-    "# TODO: Disable sandbox for Jupyter compatibility using @workflow.defn(sandboxed=False)\n",
-    "@workflow.defn(sandboxed=False)  # Disable sandbox for Jupyter compatibility\n",
+    "# Disable sandbox for Jupyter compatibility using @workflow.defn(sandboxed=False)\n",
+    "@workflow.defn(sandboxed=False)\n",
     "class WeatherAgentWorkflow:  # Define workflow class for orchestrating the agent\n",
     "    @workflow.run  # Mark this method as the workflow entry point\n",
     "    async def run(self, user_query: str) -> str:  # Accept user query, return agent response\n",
@@ -277,7 +267,7 @@
     "            ),\n",
     "            # TODO: Provide list of tools the agent can use\n",
     "            tools=[\n",
-    "                # TODO: Convert Temporal activity to Agent tool for durable execution\n",
+    "                # Convert Temporal activity to Agent tool for durable execution\n",
     "                openai_agents.workflow.activity_as_tool(\n",
     "                    get_weather,  # The activity function to wrap\n",
     "                    start_to_close_timeout=timedelta(seconds=10),  # Max time for activity execution\n",
@@ -286,9 +276,9 @@
     "        )\n",
     "        \n",
     "        # TODO: Run the agent with user query - tool calls execute as Temporal activities\n",
-    "        result = await Runner().run(agent, user_query)\n",
+    "        # HINT: await Runner().run(agent, user_query)\n",
     "        \n",
-    "        # TODO: Safely extract final output from result object (handles different result types)\n",
+    "        # Safely extract final output from result object (handles different result types)\n",
     "        return getattr(result, \"final_output\", str(result))\n",
     "\n",
     "print(f\"✅ Workflow 'WeatherAgentWorkflow' defined (task queue: {TASK_QUEUE})\")"
@@ -365,7 +355,7 @@
     "    # TODO: Connect to local Temporal server with OpenAI Agents SDK plugin\n",
     "    client = await Client.connect(\n",
     "        \"HELLO\",  # Temporal server address\n",
-    "        # TODO: Register plugins to extend Temporal's functionality\n",
+    "        # Register plugins to extend Temporal's functionality\n",
     "        plugins=[\n",
     "            # TODO: Plugin that enables OpenAI Agents SDK integration with Temporal\n",
     "            OpenAIAgentsPlugin(\n",
@@ -377,10 +367,11 @@
     "        ],\n",
     "    )\n",
     "\n",
-    "    # TODO: Create worker that polls the task queue for work\n",
+    "    # Create worker that polls the task queue for work\n",
     "    worker = Worker(\n",
     "        client,  # Use the connected Temporal client\n",
-    "        task_queue=TASK_QUEUE,  # Which queue to poll for tasks\n",
+    "        # TODO: Specify the task queue this worker will poll\n",
+    "        task_queue=,  # Which queue to poll for tasks\n",
     "        workflows=[],  # List of workflows this worker can execute\n",
     "        activities=[],  # List of activities this worker can execute\n",
     "    )\n",
@@ -407,7 +398,7 @@
     "Execute the workflow and display results.\n",
     "\n",
     "**TODO:** Implement the starter:\n",
-    "- Use `start_workflow` (not `execute_workflow`)\n",
+    "- Use `start_workflow`\n",
     "- Generate workflow ID with EST timestamp\n",
     "- Single query parameter (no trace_id)\n",
     "- Print workflow ID and Temporal UI link\n",
@@ -433,9 +424,9 @@
     "async def run_exercise():  # Define async function to execute the workflow\n",
     "    \"\"\"Execute the weather agent workflow.\"\"\"\n",
     "    # TODO: Define the user query to send to the agent\n",
-    "    query = \"What weather alerts are active in CA?\"\n",
+    "    # query = \"\"\n",
     "    \n",
-    "    # TODO: Generate workflow ID with EST timestamp for human-readable tracking\n",
+    "    # Generate workflow ID with EST timestamp for human-readable tracking\n",
     "    est = pytz.timezone('US/Eastern')  # Create EST timezone object\n",
     "    now = datetime.now(est)  # Get current time in EST\n",
     "    # TODO: Format timestamp as readable string with day-month-date-time pattern\n",
@@ -443,19 +434,16 @@
     "    \n",
     "    # TODO: Connect to Temporal server with OpenAI Agents SDK plugin\n",
     "    client = await Client.connect(\n",
-    "        \"localhost:7233\",  # Temporal server address\n",
-    "        plugins=[OpenAIAgentsPlugin()]  # Enable OpenAI Agents integration\n",
+    "        \"\",  # Temporal server address\n",
+    "        plugins=[]  # Enable OpenAI Agents integration\n",
     "    )\n",
     "    \n",
     "    print(f\"🚀 Starting workflow: {workflow_id}\")\n",
     "    print(f\"📝 Query: {query}\\n\")\n",
     "    \n",
     "    # TODO: Start the workflow (non-blocking) and get handle for tracking\n",
+    "    # Docs: https://docs.temporal.io/ai-cookbook/hello-world-litellm-python#create-the-workflow-starter\n",
     "    handle = await client.start_workflow(\n",
-    "        WeatherAgentWorkflow.run,  # Workflow method to execute\n",
-    "        query,  # User query parameter passed to workflow\n",
-    "        id=workflow_id,  # Unique workflow ID for tracking in Temporal UI\n",
-    "        task_queue=TASK_QUEUE  # Queue where worker will pick up this workflow\n",
     "    )\n",
     "    \n",
     "    print(f\"✅ Workflow started: {handle.id}\")\n",
