--- a/temporal_installation.ipynb
+++ b/temporal_installation.ipynb
@@ -39,23 +39,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "028e4a1f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1mtemporal:\u001b[0m Downloading Temporal CLI latest\n",
-      "Warning: Not enforcing strong cipher suites for TLS, this is potentially less secure\n",
-      "Warning: Not enforcing TLS v1.2, this is potentially less secure\n",
-      "\u001b[1mtemporal:\u001b[0m Temporal CLI installed at /home/vscode/.temporalio/bin/temporal\n",
-      "\u001b[1mtemporal:\u001b[0m For convenience, we recommend adding it to your PATH\n",
-      "\u001b[1mtemporal:\u001b[0m If using bash, run echo export PATH=\"\\$PATH:/home/vscode/.temporalio/bin\" >> ~/.bashrc\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Install Temporal CLI\n",
     "# | label: temporal-cli-install\n",
@@ -76,8 +63,8 @@
     "- Do not stop this cell - the server needs to stay running\n",
     "- Open a new notebook/terminal to run your exercises\n",
     "\n",
-    "**Verify it's working:**\n",
-    "- **In Codespaces:** Go to the **Ports** tab at the bottom → Find port **8233** → Click the **Globe icon** 🌐\n"
+    "**Verify Temporal is working:**\n",
+    "- **In Codespaces:** Go to the **Ports** tab at the bottom → Find port **8233** → Click the **Globe icon** 🌐 to view the Temporal UI \n"
    ]
   },
   {
@@ -85,19 +72,7 @@
    "execution_count": null,
    "id": "1bc4ec7a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CLI 1.5.1 (Server 1.29.1, UI 2.42.1)\n",
-      "\n",
-      "Server:  localhost:7233\n",
-      "UI:      http://localhost:8233\n",
-      "Metrics: http://localhost:40513/metrics\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Start Temporal dev server\n",
     "#| label: temporal-start\n",
